Create navigation bar

--- a/index.html
+++ b/index.html
@@ -9,10 +9,36 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
 <title>Franciska Du Toit</title>
+<link rel="shortcut icon" type="image/jpg" href="Favicon_Image_Location"/>
 </head>
 <body>
     <header>
-        
+    <!-- Nav Menu Section-->
+                    <nav class="navbar fixed-top navbar-expand-lg navbar-light">
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="index.html">Franciska Du Toit</a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNav">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link" href="#">Portfolio</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link" href="#">About</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link" href="#">Contact</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
+                <!-- Nav Menu Section End-->                
     </header>
     <section>
 
