--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
     <!-- Nav Menu Section-->
-                    <nav class="navbar fixed-top navbar-expand-lg navbar-light">
+                    <nav class="navbar navbar-expand-lg navbar-light">
                         <div class="container-fluid">
                             <a class="navbar-brand" href="index.html">Franciska Du Toit</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,20 @@
                 <!-- Nav Menu Section End-->                
     </header>
     <section>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6" > image
+                </div>
+                <div class="col-12 col-md-6">
+                    <h1>
+                        Hi, I am Franciska – UX Designer, Problem Solver and Software Developer in the making. 
+                    </h1>
+                        <p>
+                        My goal is to inspire people to explore, learn and challenge the norm so that we change the world
+                        </p>
+                </div>
+            </div>
+        </div>
     </section>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
