Add comments for each section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-    <!-- Nav Menu Section-->
+    <!-- Nav Menu Section Code from Bootstrap-->
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <div class="container-fluid">
                             <a class="navbar-brand" href="index.html">Franciska Du Toit</a>
@@ -43,8 +43,11 @@
     <section>
         <div class="container">
             <div class="row">
+                <!-- Hero Image-->
                 <div class="col-12 col-md-6" > image
                 </div>
+                <!-- Hero Image End-->
+                <!-- Content Section-->
                 <div class="col-12 col-md-6">
                     <h1>
                         Hi, I am Franciska – UX Designer, Problem Solver and Software Developer in the making. 
@@ -53,6 +56,7 @@
                         My goal is to inspire people to explore, learn and challenge the norm so that we change the world
                         </p>
                 </div>
+                <!-- Content Section End-->
             </div>
         </div>
     </section>
