--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="container">
             <div class="row">
                 <!-- Hero Image-->
-                <div class="col-12 col-md-6" > image
+                <div class="col-12 col-md-6" > 
+                    <img src="assets/images/franciska_du_toit_homepage_image.jpg" class="img-fluid hero-image" alt="Franciska_Du_Toit_picture">
                 </div>
                 <!-- Hero Image End-->
                 <!-- Content Section-->
