--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                 <!-- Content Section-->
                 <div class="col-12 col-md-6">
                     <h1>
-                        Hi, I am Franciska – UX Designer, Problem Solver and Software Developer in the making. 
+                        Hi, I am Franciska Du Toit - 
+                        <br> UX Designer, Problem Solver and Software Developer in the making. 
                     </h1>
                         <p>
                         My goal is to inspire people to explore, learn and challenge the norm so that we change the world
