Add class to make nav bar transparent

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="row">
                 <!-- Hero Image-->
                 <div class="col-12 col-md-6" > 
-                    <img src="assets/images/franciska_du_toit_homepage_image.jpg" class="img-fluid hero-image" alt="Franciska_Du_Toit_picture">
+                    <img src="assets/images/franciska_du_toit_homepage_image.jpg" class="img-fluid transparent" id="hero-image" alt="Franciska_Du_Toit_picture">
                 </div>
                 <!-- Hero Image End-->
                 <!-- Content Section-->
