Change home screen including nav bar and hero image for mobile-first view

--- a/index.html
+++ b/index.html
@@ -8,49 +8,52 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+<link rel="stylesheet" href="assets/css/style.css">
 <title>Franciska Du Toit</title>
-<link rel="shortcut icon" type="image/jpg" href="Favicon_Image_Location"/>
+<link rel="shortcut icon" type="image/jpg" href="#"/>
 </head>
 <body>
-    <header>
-    <!-- Nav Menu Section Code from Bootstrap-->
-                    <nav class="navbar navbar-expand-lg navbar-light">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="index.html">Franciska Du Toit</a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNav">
-                                <ul class="navbar-nav">
-                                    <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                    <a class="nav-link" href="#">Portfolio</a>
-                                    </li>
-                                    <li class="nav-item">
-                                    <a class="nav-link" href="#">About</a>
-                                    </li>
-                                    <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </nav>
+    <div class="container-fluid">
+        <div class="row" >
+            <!-- Hero Image-->
+            <div class="col-12 col-md-6">
+                <section>
+                <!-- Nav Menu Section Code from Bootstrap-->
+                        <div class="site-header"> 
+                            <nav class="navbar navbar-expand-lg fixed-top navbar-dark " style="background-color: rgba(0,0,0,.5)">
+                                <div class="container-fluid">
+                                    <a class="navbar-brand" href="index.html">Franciska Du Toit</a>
+                                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                        <span class="navbar-toggler-icon"></span>
+                                    </button>
+                                    <div class="collapse navbar-collapse" id="navbarNav">
+                                        <ul class="navbar-nav">
+                                            <li class="nav-item">
+                                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="#">Portfolio</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="#">About</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="#">Contact</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </nav>
                 <!-- Nav Menu Section End-->                
-    </header>
-    <section>
-        <div class="container">
-            <div class="row">
-                <!-- Hero Image-->
-                <div class="col-12 col-md-6" > 
-                    <img src="assets/images/franciska_du_toit_homepage_image.jpg" class="img-fluid transparent" id="hero-image" alt="Franciska_Du_Toit_picture">
+                        </div>
+                        <figure id="herobox" class="hero hero-container" style="background-image: url(assets/images/franciska_du_toit_homepage_image.jpg);">
+                        </figure>  
+                        
+                    </section>
                 </div>
-                <!-- Hero Image End-->
                 <!-- Content Section-->
-                <div class="col-12 col-md-6">
-                    <h1>
+                <div class="col-12 col-md-6 personal-info">
+                    <h1 class="personal-info">
                         Hi, I am Franciska Du Toit - 
                         <br> UX Designer, Problem Solver and Software Developer in the making. 
                     </h1>
@@ -60,9 +63,7 @@
                 </div>
                 <!-- Content Section End-->
             </div>
-        </div>
-    </section>
-
+    </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
