--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Franciska Du Toit" content="Personal & Portfolio Website for Franciska Du Toit"/>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/style.css">
 <title>Franciska Du Toit</title>
 <link rel="shortcut icon" type="image/jpg" href="#"/>
@@ -53,13 +52,43 @@
                 </div>
                 <!-- Content Section-->
                 <div class="col-12 col-md-6 personal-info">
-                    <h1 class="personal-info">
+                    <h1 class="homepage-heading" >
                         Hi, I am Franciska Du Toit - 
                         <br> UX Designer, Problem Solver and Software Developer in the making. 
                     </h1>
-                        <p>
+                        <p class="intro-paragraph">
                         My goal is to inspire people to explore, learn and challenge the norm so that we change the world
                         </p>
+                    <div>
+                        <div class="bullet">
+                            <div class="bullet-icon">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                                <div class="bullet-text">Based In Ireland
+                                </div>
+                        </div>
+                        <div class="bullet">
+                            <div class="bullet-icon">
+                                <i class="fas fa-graduation-cap"></i>
+                            </div>
+                                <div class="bullet-text">Qualified in UX Design
+                                </div>
+                        </div>
+                        <div class="bullet">
+                            <div class="bullet-icon">
+                                <i class="fas fa-code"></i>
+                            </div>
+                                <div class="bullet-text">Studying Software Development
+                                </div>
+                        </div>
+                        <div class="bullet">
+                            <div class="bullet-icon">
+                                <i class="fas fa-anchor"></i>
+                            </div>
+                                <div class="bullet-text">Learning to Sail
+                                </div>
+                        </div>
+                    </div>
                 </div>
                 <!-- Content Section End-->
             </div>
