--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <nav class="navbar navbar-expand-lg fixed-top navbar-dark " style="background-color: rgba(0,0,0,.5)">
                                 <div class="container-fluid">
                                     <a class="navbar-brand" href="index.html">Franciska Du Toit</a>
-                                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                                         <span class="navbar-toggler-icon"></span>
                                     </button>
                                     <div class="collapse navbar-collapse" id="navbarNav">
