Create and style Footer

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         </div>
                         <figure id="herobox" class="hero hero-container" style="background-image: url(assets/images/franciska_du_toit_homepage_image.jpg);">
                         </figure>  
-                        
+                <!-- Hero Image End-------->
                     </section>
                 </div>
-                <!-- Content Section-->
+                <!-- Content Section------->
                 <div class="col-12 col-md-6 personal-info">
                     <h1 class="homepage-heading" >
                         Hi, I am Franciska Du Toit - 
@@ -91,6 +91,27 @@
                     </div>
                 </div>
                 <!-- Content Section End-->
+                <!-- Footer Section------->
+                <footer>
+                    <footer class="footer">
+                    <div class="container-fluid footer-text">
+                        <div class="row">
+                            <div class="col-12 col-md-6 footer-text">
+                                <h6>© 2020. Copyright Franciska Du Toit</h6>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <ul class="social-list" >
+                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+
+                </footer>
             </div>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
