Modified bullet list on home page and add credits

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
                         My goal is to inspire people to explore, learn and challenge the norm so that we change the world
                         </p>
                     <div>
+                    <!-- original code credit for bullets: https://austinknight.com/ -->
                         <div class="bullet">
                             <div class="bullet-icon">
-                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt" alt="map-icon"></i>
                             </div>
                                 <div class="bullet-text">Based In Ireland
                                 </div>
