--- a/index.html
+++ b/index.html
@@ -93,25 +93,25 @@
                 </div>
                 <!-- Content Section End-->
                 <!-- Footer Section------->
-                <footer>
-                    <footer class="footer">
-                    <div class="container-fluid footer-text">
+                <footer class="footer">
+                    <div class="container-fluid footer-container">
                         <div class="row">
-                            <div class="col-12 col-md-6 footer-text">
-                                <h6>© 2020. Copyright Franciska Du Toit</h6>
-                            </div>
                             <div class="col-12 col-md-6">
-                                <ul class="social-list" >
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                                <ul class="social-list inline-block" >
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
                                 </ul>
+                            </div>
+                            <div class="col-12 col-md-6 copyright">
+                                <div class="copyright-icon"> 
+                                    <i class="far fa-copyright"></i> Franciska Du Toit
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
-                </footer>
-
                 </footer>
             </div>
     </div>
