Add button to home page and style for project

--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
                                 </div>
                         </div>
                     </div>
+                    <div class="btn-container">
+                        <div class="center-btn">
+                            <button type="button" id="about-btn" class="btn btn-sm">More About Me
+                            <a href="#"></a>
+                            </button>
+                        </div>
+                    </div>
+                    
                 </div>
                 <!-- Content Section End-->
                 <!-- Footer Section------->
