Add quote to home page for desktop view

--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
                             </button>
                         </div>
                     </div>
-                    
+                    <div class="quote-container">
+                        <blockquote class="blockquote">
+                            <p class="quote-text">“I believe we don't have to settle. I believe we have to explore and take a leap of faith. It is never too late to find inspiration so that we can live a more fulfilled life.”</p>
+                        </blockquote>
+                    </div>
                 </div>
                 <!-- Content Section End-->
                 <!-- Footer Section------->
