--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
                             </nav>
                 <!-- Nav Menu Section End-->                
                         </div>
-                        <figure id="herobox" class="hero hero-container" style="background-image: url(assets/images/franciska_du_toit_homepage_image.jpg);">
-                        </figure>  
+                <!-- Hero Image ----------->    
+                <figure class="figure">
+                    <img src="assets/images/franciska_du_toit_homepage_image.jpg" class="figure-img img-fluid rounded" alt="franciska_du_toit_photo">
+                </figure>    
                 <!-- Hero Image End-------->
                     </section>
                 </div>
