Add nav links and grid to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,103 @@
 <link rel="shortcut icon" type="image/jpg" href="#"/>
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row " >
+            <!-- Hero Image-->
+            <div class="col-12 col-md-6">
+                <section>
+                <!-- Nav Menu Section Code from Bootstrap-->
+                        <div class="site-header"> 
+                            <nav class="navbar navbar-expand-lg fixed-top navbar-dark " style="background-color: rgba(0,0,0,.5)">
+                                <div class="container-fluid">
+                                    <a class="navbar-brand" href="index.html">Franciska Du Toit</a>
+                                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                        <span class="navbar-toggler-icon"></span>
+                                    </button>
+                                    <div class="collapse navbar-collapse" id="navbarNav">
+                                        <ul class="navbar-nav">
+                                            <li class="nav-item">
+                                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="#">About</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="#">Contact</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </nav>
+                <!-- Nav Menu Section End-->                
+                        </div>
+                <!-- Hero Image ----------->    
+                <figure class="figure">
+                    <img src="#" class="figure-img img-fluid rounded" alt="#">
+                </figure>    
+                <!-- Hero Image End-------->
+                    </section>
+                </div>
+                <!-- Content Section------->
+                <div class="col-12 col-md-6 personal-info portfolio">
+                    <h1 class="portfolio-heading" >
+                        Collection of Projects & Case Studies 
+                    </h1>
+                        <p class="intro-paragraph">
+                        I enjoy working on different types of projects. Click below to see some of the work in my portfolio.
+                        </p>
+                <!--Blocks to projects------->
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <ul id="nav" class="list-inline menucontainer">
+                                <li class="col-6 list-inline-item menu-color-ui menu-item">
+                                    <a href="#"><span>UI Challenges</span></a>
+                                </li>
+                                <li class="col-6 list-inline-item menu-color-ux menu-item ">
+                                    <a href="#"><span>UX Case Studies</span></a>
+                                </li>
+                                <li class="col-6 list-inline-item menu-color-code menu-item">
+                                    <a href="#"><span>Coding Projects</span></a>
+                                </li>
+                                <li class="col-6 list-inline-item menu-color-other menu-item">
+                                    <a href="#"><span>Other Projects</span></a>
+                                </li>
+                            </ul>
+                        </div>
+                    
+                    </div>
+                </div>
+                    <div>
+                <!--Blocks to projects End--->
+                <!-- Content Section End-->
+                <!-- Footer Section------->
+                <footer class="footer">
+                    <div class="container-fluid footer-container">
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <ul class="social-list inline-block" >
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
+                                </ul>
+                            </div>
+                            <div class="col-12 col-md-6 copyright">
+                                <div class="copyright-icon"> 
+                                    <i class="far fa-copyright"></i> Franciska Du Toit
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                    </footer>
+                </div>
+            </div>
+        </div>
+    </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
