--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="#">Portfolio</a>
+                                                <a class="nav-link" href="portfolio.html">Portfolio</a>
                                             </li>
                                             <li class="nav-item">
                                                 <a class="nav-link" href="#">About</a>
