Change colours of grid blocks on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
                     <div class="row">
                         <div class="col">
                             <ul id="nav" class="list-inline menucontainer">
-                                <li class="col-6 list-inline-item menu-color-ui menu-item">
+                                <li class="col-6 list-inline-item menu-color-ui menu-item-ui">
                                     <a href="#"><span>UI Challenges</span></a>
                                 </li>
                                 <li class="col-6 list-inline-item menu-color-ux menu-item ">
