--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="assets/css/style.css">
 <title>Franciska Du Toit</title>
 <link rel="shortcut icon" type="image/jpg" href="#"/>
@@ -66,16 +67,16 @@
                         <div class="col">
                             <ul id="nav" class="list-inline menucontainer">
                                 <li class="col-6 list-inline-item menu-color-ui menu-item-ui">
-                                    <a href="#"><span>UI Challenges</span></a>
+                                    <a href="#" class="hvr-sweep-to-bottom"><span>UI Challenges</span></a>
                                 </li>
                                 <li class="col-6 list-inline-item menu-color-ux menu-item ">
-                                    <a href="#"><span>UX Case Studies</span></a>
+                                    <a href="#" class="hvr-sweep-to-bottom"><span>UX Case Studies</span></a>
                                 </li>
                                 <li class="col-6 list-inline-item menu-color-code menu-item">
-                                    <a href="#"><span>Coding Projects</span></a>
+                                    <a href="#" class="hvr-sweep-to-bottom"><span>Coding Projects</span></a>
                                 </li>
                                 <li class="col-6 list-inline-item menu-color-other menu-item">
-                                    <a href="#"><span>Other Projects</span></a>
+                                    <a href="#" class="hvr-sweep-to-bottom"><span>Other Projects</span></a>
                                 </li>
                             </ul>
                         </div>
