Add hero image to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
                         </div>
                 <!-- Hero Image ----------->    
                 <figure class="figure">
-                    <img src="#" class="figure-img img-fluid rounded" alt="#">
+                    <img src="assets/images/franciska_du_toit_portfoliopage.jpg" class="figure-img img-fluid rounded" alt="#">
                 </figure>    
                 <!-- Hero Image End-------->
                     </section>
