Move footer to bottom and adjust content position on portfolio page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </section>
                 </div>
                 <!-- Content Section------->
-                <div class="col-12 col-md-6 personal-info">
+                <div class="col-12 col-md-6 personal-info-container">
                     <h1 class="homepage-heading" >
                         Hi, I am Franciska Du Toit - 
                         <br> UX Designer, Problem Solver and Software Developer in the making. 
