--- a/portfolio.html
+++ b/portfolio.html
@@ -54,17 +54,19 @@
                     </section>
                 </div>
                 <!-- Content Section------->
-                <div class="col-12 col-md-6 personal-info portfolio">
-                    <h1 class="portfolio-heading" >
-                        Collection of Projects & Case Studies 
-                    </h1>
-                        <p class="intro-paragraph">
-                        I enjoy working on different types of projects. Click below to see some of the work in my portfolio.
-                        </p>
+                <div class="col-12 col-md-6 portfolio-container">
+                    <div class="portfolio-text-container">
+                        <h1 class="portfolio-heading" >
+                            Collection of Projects & Case Studies 
+                        </h1>
+                            <p class="portfolio-paragraph">
+                            I enjoy working on different types of projects. Click below to see some of the work in my portfolio.
+                            </p>
+                    </div>
                 <!--Blocks to projects------->
                 <div class="container">
                     <div class="row">
-                        <div class="col">
+                        <div class="col nav-container">
                             <ul id="nav" class="list-inline menucontainer">
                                 <li class="col-6 list-inline-item menu-color-ui menu-item-ui">
                                     <a href="#" class="hvr-sweep-to-bottom"><span>UI Challenges</span></a>
@@ -83,31 +85,29 @@
                     
                     </div>
                 </div>
-                    <div>
                 <!--Blocks to projects End--->
                 <!-- Content Section End-->
-                <!-- Footer Section------->
-                <footer class="footer">
-                    <div class="container-fluid footer-container">
-                        <div class="row">
-                            <div class="col-12 col-md-6">
-                                <ul class="social-list inline-block" >
-                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
-                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
-                                </ul>
-                            </div>
+            </div>
+            <!-- Footer Section------->
+            <footer class="footer">
+                <div class="container-fluid footer-container">
+                    <div class="row">
+                        <div class="col-12 col-md-6">
+                            <ul class="social-list inline-block" >
+                                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
+                                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
+                            </ul>
+                        </div>
                             <div class="col-12 col-md-6 copyright">
                                 <div class="copyright-icon"> 
                                     <i class="far fa-copyright"></i> Franciska Du Toit
                                 </div>
-                                </div>
                             </div>
                         </div>
-                    </footer>
-                </div>
-            </div>
+                    </div>
+            </footer>
         </div>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
