--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,98 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="assets/css/style.css">
 <title>Franciska Du Toit</title>
 <link rel="shortcut icon" type="image/jpg" href="#"/>
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row " >
+            <!-- Hero Image-->
+            <div class="col-12 col-md-6">
+                <section>
+                <!-- Nav Menu Section Code from Bootstrap-->
+                        <div class="site-header"> 
+                            <nav class="navbar navbar-expand-lg fixed-top navbar-dark " style="background-color: rgba(0,0,0,.5)">
+                                <div class="container-fluid">
+                                    <a class="navbar-brand" href="index.html">Franciska Du Toit</a>
+                                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                        <span class="navbar-toggler-icon"></span>
+                                    </button>
+                                    <div class="collapse navbar-collapse" id="navbarNav">
+                                        <ul class="navbar-nav">
+                                            <li class="nav-item">
+                                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="#">About</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="contact.html">Contact</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </nav>
+                <!-- Nav Menu Section End-->                
+                        </div>
+                <!-- Hero Image ----------->    
+                <figure class="figure">
+                    <img src="#" alt="#">
+                </figure>    
+                <!-- Hero Image End-------->
+                    </section>
+                </div>
+                <!-- Content Section------->
+                <div class="col-12 col-md-6 portfolio-container">
+                    <div class="portfolio-text-container">
+                        <h1 class="portfolio-heading" >
+                            Get in touch 
+                        </h1>
+                    </div>
+                <!--Form  ------------------>
+                <div class="form-container">
+                    <form>
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required="">
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required="">
+                        <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject" required="">
+                        <textarea rows="5" name="message" id="message" class="form-control" placeholder="Message" required=""></textarea>
+                        <div class="form-row text-center">
+                            <div class="col contact-btn-container">
+                                <button type="submit" id="contact-btn" class="btn ">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!--Form End-------------->
+                <!-- Content Section End-->
+            </div>
+            <!-- Footer Section------->
+            <footer class="footer">
+                <div class="container-fluid footer-container">
+                    <div class="row">
+                        <div class="col-12 col-md-6">
+                            <ul class="social-list inline-block" >
+                                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
+                                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
+                            </ul>
+                        </div>
+                            <div class="col-12 col-md-6 copyright">
+                                <div class="copyright-icon"> 
+                                    <i class="far fa-copyright"></i> Franciska Du Toit
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </footer>
+        </div>
+    </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
