--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                         </div>
                 <!-- Hero Image ----------->    
                 <figure class="figure">
-                    <img src="#" alt="#">
+                    <img src="assets/images/franciska_du_toit_contactpage.jpg" class="figure-img img-fluid rounded" alt="#">
                 </figure>    
                 <!-- Hero Image End-------->
                     </section>
@@ -66,7 +66,7 @@
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required="">
                         <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required="">
                         <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject" required="">
-                        <textarea rows="5" name="message" id="message" class="form-control" placeholder="Message" required=""></textarea>
+                        <textarea rows="3" name="message" id="message" class="form-control" placeholder="Message" required=""></textarea>
                         <div class="form-row text-center">
                             <div class="col contact-btn-container">
                                 <button type="submit" id="contact-btn" class="btn ">Send Message</button>
