Add links to about page, create outline for about page

--- a/about.html
+++ b/about.html
@@ -12,6 +12,132 @@
 <link rel="shortcut icon" type="image/jpg" href="#"/>
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row" >
+            <!-- Hero Image-->
+            <div class="col-12 col-md-6">
+                <section>
+                <!-- Nav Menu Section Code from Bootstrap-->
+                        <div class="site-header"> 
+                            <nav class="navbar navbar-expand-lg fixed-top navbar-dark " style="background-color: rgba(0,0,0,.5)">
+                                <div class="container-fluid">
+                                    <a class="navbar-brand" href="index.html">Franciska Du Toit</a>
+                                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                        <span class="navbar-toggler-icon"></span>
+                                    </button>
+                                    <div class="collapse navbar-collapse" id="navbarNav">
+                                        <ul class="navbar-nav">
+                                            <li class="nav-item">
+                                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="about.html">About</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="contact.html">Contact</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </nav>
+                <!-- Nav Menu Section End-->                
+                        </div>
+                <!-- Hero Image ----------->    
+                <figure class="figure">
+                    <img src="#" class="figure-img img-fluid rounded" alt="franciska_du_toit_photo">
+                </figure>    
+                <!-- Hero Image End-------->
+                    </section>
+                </div>
+                <!-- Content Section------->
+                <div class="col-12 col-md-6 about-info-container">
+                    <blockquote class="blockquote about-quote">
+                            <p class="quote-text">“My vision for us is to see the unlimited potential in the things we do and create. We might just change the world...”</p>
+                    </blockquote>
+                    <div>
+                        <h1 class="homepage-heading" >
+                            What I have been up to
+                        </h1>
+                        <!-- original code credit for list: https://austinknight.com/ -->
+                        <div>
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </div>
+                        <div class="btn-container">
+                            <div class="center-btn">
+                                <button type="button" id="about-btn" class="btn btn-sm">See All Projects
+                                <a href="#"></a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <h1 class="homepage-heading" >
+                            Fields of Study
+                        </h1>
+                        <p>
+                            I enjoy to learn and exploring different fields!
+                        </p>
+                        <div>
+                            <h5>
+                                In progress
+                            </h5>
+                            <div>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div>
+                            <h5>
+                                Completed
+                            </h5>
+                            <div>
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div>
+                            <p>Download a full PDF version of my CV</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Content Section End-->
+                <!-- Footer Section------->
+                <footer class="footer">
+                    <div class="container-fluid footer-container">
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <ul class="social-list inline-block" >
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
+                                </ul>
+                            </div>
+                            <div class="col-12 col-md-6 copyright">
+                                <div class="copyright-icon"> 
+                                    <i class="far fa-copyright"></i> Franciska Du Toit
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+    </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
