--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="btn-container">
                         <div class="center-btn">
                             <button type="button" id="about-btn" class="btn btn-sm">More About Me
-                            <a href="#"></a>
+                            <a href="about.html"></a>
                             </button>
                         </div>
                     </div>
