Add fincede project image to assets

--- a/about.html
+++ b/about.html
@@ -57,19 +57,18 @@
                     <blockquote class="blockquote about-quote">
                             <p class="quote-text">“My vision for us is to see the unlimited potential in the things we do and create. We might just change the world...”</p>
                     </blockquote>
-                    <div>
-                        <h1 class="homepage-heading" >
+                    <div class="project-timeline-container">
+                        <h1 class="project-timeline-heading" >
                             What I have been up to
                         </h1>
                         <!-- original code credit for list: https://austinknight.com/ -->
-                        <div>
-                            <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
+                        <div class="timeline-line"></div>
+                        <div class="project-timeline-tab">
+                            <div class="project-list" role="tablist">
+                                <a data-w-tab="Fincede Business Website" class="timeline-event inline-block tab-link" tabindex="-1" id="fincede-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                    <img src="#" width="25" alt="">
+                                </a>
+                            </div>
                         </div>
                         <div class="btn-container">
                             <div class="center-btn">
