--- a/about.html
+++ b/about.html
@@ -66,7 +66,19 @@
                         <div class="project-timeline-tab">
                             <div class="project-list" role="tablist">
                                 <a data-w-tab="Fincede Business Website" class="timeline-event inline-block tab-link" tabindex="-1" id="fincede-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
-                                    <img src="#" width="25" alt="">
+                                    <img src="assets/images/franciska_du_toit_fincede-project.png" width="25" alt="">
+                                </a>
+                                <a data-w-tab="Project Synergy at Sanlam" class="timeline-event inline-block tab-link" tabindex="-1" id="synergy-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                    <img src="assets/images/franciska_du_toit_sanlam-project.png" width="25" alt="">
+                                </a>
+                                <a data-w-tab="Project Conversations with Clients at Sanlam" class="timeline-event inline-block tab-link" tabindex="-1" id="conversations-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                    <img src="assets/images/franciska_du_toit_sanlam-project.png" width="25" alt="">
+                                </a>
+                                <a data-w-tab="Leasing Hub at Quadient" class="timeline-event inline-block tab-link" tabindex="-1" id="leasehub-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                    <img src="assets/images/franciska_du_toit_quadient-project.png" width="25" alt="">
+                                </a>
+                                <a data-w-tab="Fly UX for UX Institute Course" class="timeline-event inline-block tab-link" tabindex="-1" id="fluyx-project" href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="false">
+                                    <img src="assets/images/franciska_du_toit_flyux-project.png" width="25" alt="">
                                 </a>
                             </div>
                         </div>
